index background alignment out - Fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ main {
 
 #index-photo {
     background-image: url(../images/index-unit-being-craned-in-v1.avif);
-    background-position: 0 -25%;
+    background-position: 0 -15%;
 }
 
 #heading {
